icon fix on mobile

--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -56,7 +56,7 @@
     .App{
         .searchBar{
             input{
-                font-size: .6rem;
+                font-size: .5rem;
             }
             .icon{
                 svg{
